<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="main_activity_description">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_mail">Sign in with your mail</string>
    <string name="sign_in_twitter">Sign in with Twitter</string>
    <string name="google" translatable="false">google</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="twitter" translatable="false">twitter</string>
    <string name="mail" translatable="false">mail</string>
    <string name="connection_succeed">Connection succeed</string>
    <string name="error_authentication_canceled">Connection canceled</string>
    <string name="error_no_internet">Connection refused. No network.</string>
    <string name="error_unknown_error">Connection refused. Unknown error.</string>
    <string name="error_undefined_error">Connection refused. Undefined error.</string>

    <string name="facebook_app_id">341176393440517</string>
    <string name="facebook_application_id" tools:ignore="DuplicateDefinition">341176393440517</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb341176393440517</string>
    <string name="twitter_consumer_key" translatable="false">9T2EVWSgnXEK98lOaLi4hTgDy</string>
    <string name="twitter_consumer_secret" translatable="false">KHnMqZYAOPevSi3JOBDNQkq3OZL4kZ3A8htpQ0TQufkhwnS6Jr</string>

    <string name="title_workmates">Workmates</string>
    <string name="title_list_view">List View</string>
    <string name="title_map_view">Map view</string>
    <string name="logout_google">Logout</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="toolbar_title_map">I\'m hungry !</string>
    <string name="toolbar_title_list">I\'m hungry !</string>
    <string name="toolbar_title_workmates">Available workmates</string>
    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Opening menu</string>
    <string name="navigation_drawer_close">Closing menu</string>
    <string name="you_are_here">You are here !</string>
    <string name="default_paris">Paris !</string>

    <string name="title_web">WEB</string>
    <string name="title_like">LIKE</string>
    <string name="title_call">CALL</string>

    <string name="undefined_mail">Undefined mail</string>
    <string name="undefined_name">Undefined name</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="no_phone_available">No phone available</string>
    <string name="no_lunch_defined">No lunch place defined</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="is_eating_here"> is eating here.</string>
    <string name="eats_at"> eats at </string>
    <string name="not_decided_yet"> didn\'t decide yet.</string>
    <string name="you_did_not_decide_yet">You didn\'t decide yet.</string>
    <string name="you_eat_at">You eat at</string>
    <string name="you_eat_here">You eat here.</string>
    <string name="search_restaurant">Search restaurant…</string>
    <string name="notification_title">G4L : your lunch place today</string>
    <string name="default_notification_channel_id">1</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="disable_notifications">Disable notifications</string>

</resources>
