<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/resto_activity_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_resto"/>

        <LinearLayout
            android:id="@+id/resto_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/orange">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom du resto"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_2"
                android:baselineAlignBottom="true"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:text="12 Rue du Faubourg Saint-Denis"
            android:paddingEnd="15dp"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_call"
                    android:background="@color/white"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_call"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:background="@color/white"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_like"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_web"
                    android:background="@color/white"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_web"
                    android:textColor="@color/orange"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/light_grey"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_my_choice"
        app:layout_anchor="@id/resto_activity_bg"
        app:layout_anchorGravity="bottom|right|end"
        android:elevation="6dp"
        android:layout_margin="16dp"
        android:clickable="true"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>